--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
     <h2>Lorem Ipsum</h2>
     <ul>
-    
+      <li>Lorem ipsum dolor sit amet</li>
+      <li>Consectetur adipiscing elit</li>
+      <li>Integer finibus</li>
+      <li>Nisl tempus semper semper</li>
+      <li>Purus nisl hendrerit tellus</li>
     </ul>
   </body>
 </html>
