Adding another h2 tag in html file

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <li>Nisl tempus semper semper</li>
       <li>Purus nisl hendrerit tellus</li>
     </ul>
+    <h2>Et Consequat Magna</h2>
   </body>
 </html>
