Adding content to second ul tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </ul>
     <h2>Et Consequat Magna</h2>
     <ul>
-      
+      <li>Orci ut velit</li>
+      <li>Pellentesque cursus justo</li>
+      <li>In felis condimentum cursus</li>
     </ul>
   </body>
 </html>
