--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <title>Bootstrap Practice</title>
   </head>
   <body>
