--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bootstrap Practice</title>
   </head>
   <body>
+    <div class="container">
     <h1>Bootstrap Practice</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -40,5 +41,6 @@
      <li>Proin in ex lectus</li>
      <li>Donec accumsan in nisi non ultricies</li>
     </ul>
+  </div>
   </body>
 </html>
