--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
     <h1>Bootstrap Practice</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+    </div>
     <h2>Lorem Ipsum</h2>
     <ul>
       <li>Lorem ipsum dolor sit amet</li>
