Add a div class well to html file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
     </div>
+    <div class="well">
     <h2>Lorem Ipsum</h2>
     <ul>
       <li>Lorem ipsum dolor sit amet</li>
@@ -22,6 +23,7 @@
       <li>Nisl tempus semper semper</li>
       <li>Purus nisl hendrerit tellus</li>
     </ul>
+  </div>
     <h2>Et Consequat Magna</h2>
     <ul>
       <li>Orci ut velit</li>
