Adding a div class pane1 to html file

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
       <li>Purus nisl hendrerit tellus</li>
     </ul>
   </div>
+    <div class="pane1 pane1-default">
     <h2>Et Consequat Magna</h2>
     <ul>
       <li>Orci ut velit</li>
       <li>Pellentesque cursus justo</li>
       <li>In felis condimentum cursus</li>
     </ul>
+  </div>
     <ul>
       <li>Proin dignissim lectus enim</li>
       <li>Eu bibendum mauris euismod in</li>
