--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <title>Bootstrap Practice</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-    <h1>Bootstrap Practice</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+
+<head>
+  <meta charset="utf-8">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <title>Bootstrap Practice</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Bootstrap Practice</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor.</p>
     </div>
     <div class="well">
-    <h2>Lorem Ipsum</h2>
-    <ul>
-      <li>Lorem ipsum dolor sit amet</li>
-      <li>Consectetur adipiscing elit</li>
-      <li>Integer finibus</li>
-      <li>Nisl tempus semper semper</li>
-      <li>Purus nisl hendrerit tellus</li>
-    </ul>
+      <h2>Lorem Ipsum</h2>
+      <ul>
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Consectetur adipiscing elit</li>
+        <li>Integer finibus</li>
+        <li>Nisl tempus semper semper</li>
+        <li>Purus nisl hendrerit tellus</li>
+      </ul>
+    </div>
+    <div class="panel panel-default">
+    <div class="panel-heading">
+      <h2 class="panel-title">Et Consequat Magna</h2>
+    </div>
+    <div class="panel-body">
+      <ul>
+        <li>Orci ut velit</li>
+        <li>Pellentesque cursus justo</li>
+        <li>In felis condimentum cursus</li>
+      </ul>
+    </div>
+    <div class="panel-footer">
+      <p>Panel Footer</p>
+    </div>
   </div>
-    <div class="pane1 pane1-default">
-    <h2>Et Consequat Magna</h2>
-    <ul>
-      <li>Orci ut velit</li>
-      <li>Pellentesque cursus justo</li>
-      <li>In felis condimentum cursus</li>
-    </ul>
-  </div>
+
     <ul>
       <li>Proin dignissim lectus enim</li>
       <li>Eu bibendum mauris euismod in</li>
@@ -41,12 +49,13 @@
     <h2>Morbi Lacinia Mollis Tortor</h2>
     <ul>
       <li>A sodales elit tempor ut</li>
-     <li>Ut elit augue</li>
-     <li>Imperdiet eu est faucibus</li>
-     <li>Tristique hendrerit mi</li>
-     <li>Proin in ex lectus</li>
-     <li>Donec accumsan in nisi non ultricies</li>
+      <li>Ut elit augue</li>
+      <li>Imperdiet eu est faucibus</li>
+      <li>Tristique hendrerit mi</li>
+      <li>Proin in ex lectus</li>
+      <li>Donec accumsan in nisi non ultricies</li>
     </ul>
   </div>
-  </body>
+</body>
+
 </html>
