setting more backgrounds to red using bg-denger

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <li class="bg-danger">A sodales elit tempor ut</li>
       <li>Ut elit augue</li>
       <li>Imperdiet eu est faucibus</li>
-      <li>Tristique hendrerit mi</li>
+      <li class="bg-danger">Tristique hendrerit mi</li>
       <li>Proin in ex lectus</li>
-      <li>Donec accumsan in nisi non ultricies</li>
+      <li class="bg-denger">Donec accumsan in nisi non ultricies</li>
     </ul>
   </div>
 </body>
