Adding panel-info to htmlfile

--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
       <p>Panel Footer</p>
     </div>
   </div>
-
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h2 class="panel-title">Et Consequat Manga<h2>
+  </div>
+  <div class="panel-body">
     <ul>
-      <li>Proin dignissim lectus enim</li>
-      <li>Eu bibendum mauris euismod in</li>
-      <li>Morbi dictum</li>
-      <li>Ex et malesuada pellentesque</li>
+      <li>Orci ut velit</li>
+      <li>Pellentesque cursus justo</li>
+      <li>In felis condimentum cursus</li>
     </ul>
-    <h2>Morbi Lacinia Mollis Tortor</h2>
+    <div class="panel-footer">
+      <p>Panel Footer</p>
+    </div>
+  </div>
     <ul>
       <li class="bg-danger">A sodales elit tempor ut</li>
       <li>Ut elit augue</li>
